python/testData/quickFixes/PyAddImportQuickFixTest/betweenImportsAboveBoundComments/main.py
import a
# comment 1

# comment 2
# comment 3
import c

print(a, c)
<error descr="Unresolved reference 'b'"><caret>b</error>